--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,12 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "buttons";
+@import "banner";
+@import "card";
+
+
+.center-text {
+  text-align: center;
+}
+
