--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -20,12 +20,10 @@
 <% end %>
 
 <div class="card-container">
-
-
   <% @cocktails.each do |cocktail| %>
   <%= link_to cocktail_path(cocktail), :action => 'go' do  %>
     <div class="card-cocktail">
-      <img class="card-cocktail-image" src="<%= image_path(cocktail.image)%>" />
+      <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill, class:"card-cocktail-image" %>
       <div class="card-cocktail-infos">
         <div>
           <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
