--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,12 +1,13 @@
-<%img = @cocktail.image%>
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url("<%=@cocktail.image%>">
+
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url("<%=@cocktail.photo.key%>">
   <div class="container">
     <h1><%= @cocktail.name %></h1>
   </div>
 </div>
 <h3>Description</h3>
 
+<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
 
 <h3>Ingredients</h3>
 <% @doses.each do |dose| %>
