my cocktail app final

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -12,7 +12,7 @@
       <%= f.error_notification %>
       <%= f.input :name %>
       <%= f.input :photo, as: :file %>
-      <%= f.submit "Submit cocktail", class: "btn btn-primary" %>
+      <%= f.submit "Submit cocktail", class: "form-btn" %>
     </div>
     <% end %>
   </div>
