--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,7 @@
   background-position: center;
   padding: 150px 0;
   margin-bottom: 20px;
+  height: 100vh;
 }
 
 .banner h1 {
@@ -18,4 +19,12 @@
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.banner-detail {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  margin-bottom: 20px;
+  height: 50vh;
 }
