--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -2,7 +2,14 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1EDD88;
+  background: #FF8392;
   transition: background 0.3s ease;
-  margin-top: 20px;
+}
+
+.form-btn {
+    color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: #FF8392;
+  transition: background 0.3s ease;
 }
