--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,23 +1,12 @@
+<%= render "navbar"%>
+<%= render "banner"%>
 
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url( <%= image_path('bannerimage.jpg')%>);">
-  <div class="container">
-    <h1>Delicious cocktails for all!</h1>
-    <%= link_to "Create Cocktail", new_cocktail_path, class: "btn btn-flat" %>
-  </div>
-</div>
+
 
 
 <h1 class="center-text">Cocktails Index</h1>
 
-<%= simple_form_for :search, url: cocktails_path, method: :get do |f| %>
-  <div class="search-form-control form-group">
-    <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-    <button name="button" type="submit" class="btn btn-flat">
-      <i class="fas fa-search"></i> Search
-    </button>
-  </div>
-<% end %>
 
 <div class="card-container">
   <% @cocktails.each do |cocktail| %>
@@ -37,5 +26,7 @@
   <% end %>
   <% end %>
 </div>
+
+<%= render "footer"%>
 
 
