--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,23 +1,41 @@
+<%= render "navbar"%>
 
-
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url("<%=@cocktail.photo.key%>">
+<div class="banner-detail" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
   <div class="container">
     <h1><%= @cocktail.name %></h1>
   </div>
 </div>
-<h3>Description</h3>
-
-<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
-
-<h3>Ingredients</h3>
-<% @doses.each do |dose| %>
-<%= link_to "Remove", dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } %>
-<p> <%= dose.description %></p>
-<% end %>
 
 
-<%= link_to "Go back", cocktails_path %>
+<div class="container">
+  <div class="cocktail-content">
+    <div class="left-content">
+      <h3>Description</h3>
+      <p>Blend: <% @doses.each do |dose| %>
+      <%= dose.description %>
+      <%end %>
+      </p>
+    </div>
+    <div class="right-content">
+      <h3>Ingredients</h3>
+        <% @cocktail.doses.each do |d| %>
+          <div class="ingredients">
+            <p><%= d.ingredient.name %></p>
+            <p><%= d.description %></p>
+            <%= link_to "delete ingredient", dose_path(d), method: :delete %>
+          </div>
+        <% end %>
+        <%= link_to "Add new ingredient", new_cocktail_dose_path(@cocktail), class:"btn-flat"  %>
+    </div>
+  </div>
+  <%= link_to "Go back", cocktails_path %>
+</div>
 
 
-<%= link_to "Add new dose", new_cocktail_dose_path(@cocktail)  %>
+
+
+
+<%= render "footer"%>
+
+
 
